some changes of directory

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "7621dab1",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "fdd6c241",
    "metadata": {
     "scrolled": true
@@ -33,20 +33,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\WalidCorleone\\AppData\\Local\\Temp\\ipykernel_22016\\2312804600.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Chrome(\n",
-      "C:\\Users\\WalidCorleone\\AppData\\Local\\Temp\\ipykernel_22016\\2312804600.py:12: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
-      "  username = driver.find_element_by_id('session_key')\n",
-      "C:\\Users\\WalidCorleone\\AppData\\Local\\Temp\\ipykernel_22016\\2312804600.py:22: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
-      "  password = driver.find_element_by_id('session_password')\n",
-      "C:\\Users\\WalidCorleone\\AppData\\Local\\Temp\\ipykernel_22016\\2312804600.py:30: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
-      "  sign_in_button = driver.find_element_by_xpath('//*[@type=\"submit\"]')\n"
+      "C:\\Users\\WalidCorleone\\AppData\\Local\\Temp\\ipykernel_16780\\2085406218.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(\"C:/Users/WalidCorleone/selenium/DeepAnalyzerImages/chromedriver.exe\")\n"
      ]
     }
    ],
    "source": [
     "# specifies the path to the chromedriver.exe\n",
-    "driver = webdriver.Chrome(os.getenv(\"PATH_WEBDRIVER\"))\n",
+    "path=os.getenv('PATH_WEBDRIVER')\n",
+    "driver = webdriver.Chrome(\"C:/Users/WalidCorleone/selenium/DeepAnalyzerImages/chromedriver.exe\")\n",
     "## Load .env file\n",
     "load_dotenv(verbose=True)\n",
     "\n",
