MODIFY: scraper.py

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "7621dab1",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "fdd6c241",
    "metadata": {
     "scrolled": true
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "7d9bcc3e",
    "metadata": {},
    "outputs": [],
@@ -201,13 +201,12 @@
     "        driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
     "        time.sleep(1.5)\n",
     "        sel = Selector(text=driver.page_source)\n",
-    "    return sel\n",
-    "print(sel)"
+    "    return sel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "3a470059",
    "metadata": {},
    "outputs": [],
@@ -226,12 +225,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "5e8b36d6",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.linkedin.com/in/melissa-clegg\n",
+      "https://www.linkedin.com/in/ben-chikh-wissal-179618224\n",
+      "https://www.linkedin.com/in/oussama-sidane-6a0b0298\n",
+      "https://www.linkedin.com/in/abdelmadjid-rahal-163138210\n",
+      "https://www.linkedin.com/in/tomas-lascurain-572b68b2\n",
+      "https://www.linkedin.com/in/soukaina-benzahia-7287b81b1\n",
+      "https://www.linkedin.com/in/celestin-michel-boyom-fogue-a42451201\n",
+      "https://www.linkedin.com/in/ravi-kumar-jha-1097541b4\n",
+      "https://www.linkedin.com/in/abderrahmanelaidouni\n",
+      "https://www.linkedin.com/in/theo-marechal-737928142\n",
+      "https://www.linkedin.com/in/malek-addad\n",
+      "https://www.linkedin.com/in/audrey-leloup-3b7365214\n",
+      "https://www.linkedin.com/in/ale-aounallah-b28157227\n",
+      "https://www.linkedin.com/in/seydou-soumano\n",
+      "https://www.linkedin.com/in/ang%C3%A9lique-dalleau-6a6481239\n",
+      "https://www.linkedin.com/in/robin-schoonderwoerd\n",
+      "https://www.linkedin.com/in/karim-dahdouh-b6b366ba\n",
+      "https://www.linkedin.com/in/eduard-bosch-mustaros\n",
+      "https://www.linkedin.com/in/diboune-boubekeur-1526b0167\n",
+      "https://www.linkedin.com/in/nassim-aberbache-5a1a7b9a\n",
+      "https://www.linkedin.com/in/farouqkasah\n",
+      "https://www.linkedin.com/in/ismail-badii-b23365173\n",
+      "https://www.linkedin.com/in/marouane-bel-haj-salah-208442173\n",
+      "https://www.linkedin.com/in/camelia-kerkar-a0b815a0\n",
+      "https://www.linkedin.com/in/aya-najih-03874a197\n",
+      "https://www.linkedin.com/in/aravind-v-3bb627159\n",
+      "https://www.linkedin.com/in/lyes-kendi-309385131\n",
+      "https://www.linkedin.com/in/abderaouf\n",
+      "https://www.linkedin.com/in/arnaud-tang-576a2a182\n",
+      "https://www.linkedin.com/in/rafik-saidani-ab6825179\n",
+      "https://www.linkedin.com/in/drissia-kaabeche-b9241b1ba\n",
+      "https://www.linkedin.com/in/paul-robin-942b37167\n",
+      "https://www.linkedin.com/in/danis-kwendjeu-9a1106210\n",
+      "https://www.linkedin.com/in/majdoub-loujein-5965a2194\n",
+      "https://www.linkedin.com/in/mohamed-walid-bouazouni-066a81200\n",
+      "https://www.linkedin.com/in/valentin-delpy\n",
+      "https://www.linkedin.com/in/aymen-lejri-651519234\n",
+      "https://www.linkedin.com/in/regis-lecornet-9108b22\n",
+      "https://www.linkedin.com/in/myriam-sanvee\n",
+      "https://www.linkedin.com/in/kanika-belwal-7950ab223\n",
+      "https://www.linkedin.com/in/sudhirsingh17\n",
+      "https://www.linkedin.com/in/eric-b-824373159\n",
+      "https://www.linkedin.com/in/myriam-khachlouf\n",
+      "https://www.linkedin.com/in/aissam-choudar-578804134\n",
+      "https://www.linkedin.com/in/enzo-ustariz-9b517012a\n",
+      "https://www.linkedin.com/in/marine-speisser-728a51204\n",
+      "https://www.linkedin.com/in/v-hesham-abdulalq-822389188\n",
+      "https://www.linkedin.com/in/el-bachir-rehhali-7b028a202\n",
+      "https://www.linkedin.com/in/marco-soumonnie-222441189\n",
+      "https://www.linkedin.com/in/nolberto-garcia-18a1b7105\n",
+      "https://www.linkedin.com/in/yassine-toughrai-3a527b16b\n",
+      "https://www.linkedin.com/in/kamilia-hadjal-826067150\n",
+      "https://www.linkedin.com/in/l%C3%A9on-guy-010200208\n",
+      "https://www.linkedin.com/in/muhammad-asif-rao-bb7762237\n",
+      "https://www.linkedin.com/in/thomas-samson-94a5a7123\n",
+      "https://www.linkedin.com/in/noe-baiocchi-890262211\n",
+      "https://www.linkedin.com/in/mohamed-akram-djouahra-036692200\n",
+      "https://www.linkedin.com/in/annyasa-roy-4b1a01219\n",
+      "https://www.linkedin.com/in/alexis-pleney\n",
+      "https://www.linkedin.com/in/st%C3%A9phane-bellis-937b7733\n",
+      "https://www.linkedin.com/in/%F0%9F%8E%93-eformation-%F0%9F%8E%93-ing%C3%A9nierie-319102182\n",
+      "https://www.linkedin.com/in/esther-elendu-a3aa92132\n",
+      "https://www.linkedin.com/in/leonie-mouchel\n",
+      "https://www.linkedin.com/in/tracy-kennedy-051797237\n",
+      "https://www.linkedin.com/in/grace-esther-dong-396344209\n",
+      "https://www.linkedin.com/in/lo%C3%AFc-weiss-947337179\n",
+      "https://www.linkedin.com/in/devasheesh-mallik\n",
+      "https://www.linkedin.com/in/clara-bernadou-865252223\n",
+      "https://www.linkedin.com/in/alicia-herault\n",
+      "https://www.linkedin.com/in/kevin-essomba-bb91a9226\n",
+      "https://www.linkedin.com/in/amirouche-guedoudj-63b931226\n",
+      "https://www.linkedin.com/in/boussaad-sayad-0542a061\n",
+      "https://www.linkedin.com/in/fahd-roussafi\n",
+      "https://www.linkedin.com/in/alexandre-heujaine-b80375a0\n",
+      "https://www.linkedin.com/in/sahithi-d-84775a230\n",
+      "https://www.linkedin.com/in/l%C3%A9onie-thomas-b6479620a\n",
+      "https://www.linkedin.com/in/hawa-b-a57064193\n",
+      "https://www.linkedin.com/in/nina-delcroix-086a93154\n",
+      "https://www.linkedin.com/in/jose-hernandez-4909b81b0\n",
+      "https://www.linkedin.com/in/pierre-barillec-833779174\n",
+      "80\n",
+      "80\n"
+     ]
+    }
+   ],
    "source": [
     "for i in LinkedinHref():\n",
     "    print(i)\n",
@@ -398,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "e793c83b",
    "metadata": {},
    "outputs": [
@@ -406,40 +494,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<selenium.webdriver.remote.webelement.WebElement (session=\"48edfb15325dc4a296261ecc4817ef49\", element=\"70eaf482-bbd2-461a-a6e0-b57b2a8634a0\")>]\n",
-      "Walid KHIRDINE\n",
-      "https://media-exp1.licdn.com/dms/image/C4E03AQF9osGAsMI2kA/profile-displayphoto-shrink_400_400/0/1646586541420?e=1657152000&v=beta&t=1TsfnwAfsYz-5JFrGqK1BG6QoxdVd81JPEqhbo2GH4w\n"
+      "[<selenium.webdriver.remote.webelement.WebElement (session=\"0e2bcb1b0414106ceb423f5d142b0b12\", element=\"4f6fb00f-5a3b-4639-9711-d22aee61a6ca\")>]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\WalidCorleone\\AppData\\Local\\Temp\\ipykernel_27372\\2158959595.py:7: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
+      "C:\\Users\\WalidCorleone\\AppData\\Local\\Temp\\ipykernel_27372\\970263293.py:7: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
       "  text = driver.find_element_by_class_name(\"text-heading-xlarge.inline.t-24.v-align-middle.break-words\").text\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Melissa Clegg\n",
+      "https://media-exp1.licdn.com/dms/image/C4E03AQGjjzDENSTT_A/profile-displayphoto-shrink_400_400/0/1627404864193?e=1657152000&v=beta&t=-lz4i-1A5oDB3fCe99uVmwQd3wJFDhhEsKOG5SGAQnc\n"
      ]
     }
    ],
    "source": [
-    "driver.get('https://www.linkedin.com/in/walid-khirdine/')\n",
-    "picture_url = driver.find_elements(By.CLASS_NAME, 'profile-photo-edit.pv-top-card__edit-photo')\n",
+    "driver.get('https://www.linkedin.com/in/melissa-clegg')\n",
+    "imagename = os.listdir(os.getenv(\"LOCAL_IMAGES\"))\n",
+    "picture_url = driver.find_elements(By.CLASS_NAME, 'pv-top-card__non-self-photo-wrapper.ml0')\n",
     "print(picture_url)\n",
     "for url in picture_url:\n",
     "    a = url.find_element(By.TAG_NAME, 'img').get_attribute('src')\n",
     "    text = driver.find_element_by_class_name(\"text-heading-xlarge.inline.t-24.v-align-middle.break-words\").text\n",
     "    print(text)\n",
     "    print(a)\n",
-    "    for imagename in imageslist:\n",
     "    # # download the image\n",
-    "        if imagename+\".png\" != text:\n",
-    "            urllib.request.urlretrieve(a, \"images/\"+text+\".png\")\n",
-    "            # add a 5 second pause loading each URL\n",
-    "            time.sleep(2)\n"
+    "    if text+\".png\" not in imagename:\n",
+    "        urllib.request.urlretrieve(a, \"images/\"+text+\".png\")\n",
+    "        # add a 5 second pause loading each URL\n",
+    "        time.sleep(2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "id": "4cc47721",
    "metadata": {},
    "outputs": [
@@ -447,12 +541,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['.env', '.git', '.gitignore', '.ipynb_checkpoints', 'chromedriver.exe', 'geckodriver.log', 'images', 'README.md', 'requirements.txt', 'scraper.py', 'test.ipynb']\n"
+      "['.ipynb_checkpoints', 'AdNonad0.png', 'AdNonad1.png', 'AdNonad10.png', 'AdNonad100.png', 'AdNonad101.png', 'AdNonad102.png', 'AdNonad103.png', 'AdNonad104.png', 'AdNonad105.png', 'AdNonad106.png', 'AdNonad107.png', 'AdNonad108.png', 'AdNonad109.png', 'AdNonad11.png', 'AdNonad110.png', 'AdNonad111.png', 'AdNonad112.png', 'AdNonad113.png', 'AdNonad114.png', 'AdNonad115.png', 'AdNonad116.png', 'AdNonad117.png', 'AdNonad118.png', 'AdNonad119.png', 'AdNonad12.png', 'AdNonad120.png', 'AdNonad121.png', 'AdNonad122.png', 'AdNonad123.png', 'AdNonad124.png', 'AdNonad125.png', 'AdNonad126.png', 'AdNonad127.png', 'AdNonad128.png', 'AdNonad129.png', 'AdNonad13.png', 'AdNonad130.png', 'AdNonad131.png', 'AdNonad132.png', 'AdNonad133.png', 'AdNonad134.png', 'AdNonad135.png', 'AdNonad136.png', 'AdNonad137.png', 'AdNonad138.png', 'AdNonad139.png', 'AdNonad14.png', 'AdNonad140.png', 'AdNonad141.png', 'AdNonad142.png', 'AdNonad143.png', 'AdNonad144.png', 'AdNonad145.png', 'AdNonad146.png', 'AdNonad147.png', 'AdNonad148.png', 'AdNonad149.png', 'AdNonad15.png', 'AdNonad150.png', 'AdNonad151.png', 'AdNonad152.png', 'AdNonad153.png', 'AdNonad154.png', 'AdNonad155.png', 'AdNonad156.png', 'AdNonad157.png', 'AdNonad158.png', 'AdNonad159.png', 'AdNonad16.png', 'AdNonad160.png', 'AdNonad161.png', 'AdNonad162.png', 'AdNonad163.png', 'AdNonad165.png', 'AdNonad17.png', 'AdNonad18.png', 'AdNonad19.png', 'AdNonad2.png', 'AdNonad20.png', 'AdNonad21.png', 'AdNonad22.png', 'AdNonad23.png', 'AdNonad24.png', 'AdNonad25.png', 'AdNonad26.png', 'AdNonad27.png', 'AdNonad28.png', 'AdNonad29.png', 'AdNonad3.png', 'AdNonad30.png', 'AdNonad31.png', 'AdNonad32.png', 'AdNonad33.png', 'AdNonad34.png', 'AdNonad35.png', 'AdNonad36.png', 'AdNonad37.png', 'AdNonad38.png', 'AdNonad39.png', 'AdNonad4.png', 'AdNonad40.png', 'AdNonad41.png', 'AdNonad42.png', 'AdNonad43.png', 'AdNonad44.png', 'AdNonad45.png', 'AdNonad46.png', 'AdNonad47.png', 'AdNonad48.png', 'AdNonad49.png', 'AdNonad5.png', 'AdNonad50.png', 'AdNonad51.png', 'AdNonad52.png', 'AdNonad53.png', 'AdNonad54.png', 'AdNonad55.png', 'AdNonad56.png', 'AdNonad57.png', 'AdNonad58.png', 'AdNonad59.png', 'AdNonad6.png', 'AdNonad60.png', 'AdNonad61.png', 'AdNonad62.png', 'AdNonad63.png', 'AdNonad64.png', 'AdNonad65.png', 'AdNonad66.png', 'AdNonad67.png', 'AdNonad68.png', 'AdNonad69.png', 'AdNonad7.png', 'AdNonad70.png', 'AdNonad71.png', 'AdNonad72.png', 'AdNonad73.png', 'AdNonad74.png', 'AdNonad75.png', 'AdNonad76.png', 'AdNonad77.png', 'AdNonad78.png', 'AdNonad79.png', 'AdNonad8.png', 'AdNonad80.png', 'AdNonad81.png', 'AdNonad82.png', 'AdNonad83.png', 'AdNonad84.png', 'AdNonad85.png', 'AdNonad86.png', 'AdNonad87.png', 'AdNonad88.png', 'AdNonad89.png', 'AdNonad9.png', 'AdNonad90.png', 'AdNonad91.png', 'AdNonad92.png', 'AdNonad93.png', 'AdNonad94.png', 'AdNonad95.png', 'AdNonad96.png', 'AdNonad97.png', 'AdNonad98.png', 'AdNonad99.png', 'Danis KWENDJEU.png', 'Enzo USTARIZ.png', 'Esther Elendu.png', 'Majdoub Loujein.png', 'Malek ADDAD.png', 'Muhammad Asif Rao.png', 'Thomas Samson.png', 'V Hesham AbdulAlq.png', 'Walid KHIRDINE.png', 'Yanis Belkhir.png']\n"
      ]
     }
    ],
    "source": [
-    "imagename = os.listdir(os.getenv(\"LOCAL_IMAGES\"))\n",
+    "\n",
     "print(imagename)"
    ]
   },
